# activex-endpoint

./: .env  .gitignore  Dockerfile  activex.yml  build.sh  init.sh  pyproject.toml  reload_local_version.sh  requirements.txt  run.sh
activexendpoint/: main.py
activexendpoint/caching/: __init__.py
activexendpoint/dummy/: __init__.py
activexendpoint/interfaces/: __init__.py
activexendpoint/store/: __init__.py
activexendpoint/utils/: __init__.py
activexmiddleware/: main.py
tests/: cache_test.py
