[tool.poetry]
name = "activexendpoint"
version = "0.1.0"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
mictlanx = "^0.0.150"
pyzmq = "^26.0.3"
cloudpickle = "^3.0.0"
aiofiles = "^23.2.1"
# poetry = "*"

activex = "^0.0.16"
[tool.poetry.group.dev.dependencies]
pandas = "1.4.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

